tests/snapshots/snapshots__insert_recurrence_builder_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#cad3f5 bg=#1e2030}                       {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#24273a}                                          {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}  {/}{fg=#c6a0f6 bg=#1e2030}■{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#cad3f5 bg=#1e2030 mod=bold}tasq{/}{fg=#cad3f5 bg=#1e2030}               {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#24273a}  {/}{fg=#cad3f5 bg=#24273a mod=bold}All tasks{/}{fg=#6e738d bg=#24273a}  wednesday 6 may{/}{bg=#24273a}              {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}  {/}{fg=#cad3f5 bg=#212435 mod=bold}Finish Q2 board deck{/}{bg=#212435}           {/}
{fg=#cad3f5 bg=#1e2030}                       {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#24273a}  {/}{fg=#6e738d bg=#24273a}15 tasks{/}{bg=#24273a}                                {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}⌂{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Home{/}{fg=#cad3f5 bg=#1e2030}              {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#24273a}  {/}{fg=#6e738d bg=#24273a} + filter {/}{bg=#24273a}           {/}{fg=#6e738d bg=#24273a}sort · priority ▾  {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}  {/}{fg=#6e738d bg=#212435}due{/}{bg=#212435}      {/}{fg=#ed8796 bg=#212435}today{/}{bg=#212435}                 {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}▤{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Inbox{/}{fg=#cad3f5 bg=#1e2030}          {/}{fg=#6e738d bg=#1e2030}3{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#24273a}                                          {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}  {/}{fg=#6e738d bg=#212435}space{/}{bg=#212435}    {/}{fg=#8aadf4 bg=#212435}●{/}{bg=#212435} {/}{fg=#8aadf4 bg=#212435}work{/}{bg=#212435}                {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}◉{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Today{/}{fg=#cad3f5 bg=#1e2030}          {/}{fg=#6e738d bg=#1e2030}1{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#ed8796 bg=#24273a}PRIORITY A{/}{fg=#cad3f5 bg=#24273a} {/}{fg=#363a4f bg=#24273a}─────────────────────────────{/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}  {/}{fg=#6e738d bg=#212435}priority{/}{bg=#212435} {/}{fg=#ed8796 bg=#212435}⚑ high{/}{bg=#212435}                {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}◷{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Upcoming{/}{fg=#cad3f5 bg=#1e2030}       {/}{fg=#6e738d bg=#1e2030}6{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#c6a0f6 bg=#363a4f mod=bold}▎ {/}{fg=#cad3f5 bg=#363a4f}☐ {/}{fg=#ed8796 bg=#363a4f mod=bold}⚑ {/}{fg=#cad3f5 bg=#363a4f}Finish Q2 board deck {/}{fg=#ed8796 bg=#4c3a4c} ◷ due today {/}{fg=#cad3f5 bg=#363a4f} {/}{fg=#8aadf4 bg=#38425f} {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}  {/}{fg=#6e738d bg=#212435}tags{/}{bg=#212435}     {/}{fg=#f5bde6 bg=#212435}@laptop{/}{bg=#212435}               {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}▦{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Calendar{/}{fg=#cad3f5 bg=#1e2030}          {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#6e738d bg=#24273a}☐ {/}{fg=#ed8796 bg=#24273a mod=bold}⚑ {/}{fg=#cad3f5 bg=#24273a}Call dentist to reschedule cleaning {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}✎{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Notes{/}{fg=#cad3f5 bg=#1e2030}             {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#f5a97f bg=#24273a}PRIORITY B{/}{fg=#cad3f5 bg=#24273a} {/}{fg=#363a4f bg=#24273a}─────────────────────────────{/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#a5adcb bg=#1e2030}⌕{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Search{/}{fg=#cad3f5 bg=#1e2030}         {/}{fg=#6e738d bg=#1e2030}/{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#6e738d bg=#24273a}☐ {/}{fg=#f5a97f bg=#24273a mod=bold}⚑ {/}{fg=#cad3f5 bg=#24273a}Review pull requests for auth refact{/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}                       {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#6e738d bg=#24273a}☐ {/}{fg=#f5a97f bg=#24273a mod=bold}⚑ {/}{fg=#cad3f5 bg=#24273a}Renew passport before summer trip {/}{fg=#6e738d bg=#33364b} ◷{/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030}SPACES{/}{fg=#cad3f5 bg=#1e2030}               {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}  {/}{fg=#6e738d bg=#24273a}☐ {/}{fg=#f5a97f bg=#24273a mod=bold}⚑ {/}{fg=#cad3f5 bg=#24273a}Draft hiring rubric for senior eng {/}{fg=#8aadf4 bg=#38425f} {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#8aadf4 bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}work{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#836da7 bg=#1e2030}╭──────────────────────────────────────────────────────────────────────────────╮{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#b7bdf8 bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}healt{/}{fg=#836da7 bg=#1e2030}│{/}{bg=#1e2030}                                                                              {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#8bd5ca bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}finan{/}{fg=#836da7 bg=#1e2030}│{/}{bg=#1e2030}  {/}{fg=#c6a0f6 bg=#1e2030 mod=bold}> {/}{fg=#cad3f5 bg=#1e2030}Water the plants {/}{bg=#394361} {/}{fg=#8aadf4 bg=#394361}+home{/}{bg=#394361} {/}{fg=#c6a0f6 bg=#1e2030}▏{/}{bg=#1e2030}                                        {/}{bg=#484062} {/}{fg=#c6a0f6 bg=#484062 mod=bold}  ↑  {/}{bg=#484062} {/}{bg=#1e2030}  {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#f5bde6 bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}home{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#1e2030}                                                                              {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#f5a97f bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}learn{/}{fg=#836da7 bg=#1e2030}│{/}{bg=#1e2030}  {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ▦  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ◷  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ⧗  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ↻  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ⇥  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  !  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#363f5b} {/}{fg=#8aadf4 bg=#363f5b} + home {/}{bg=#363f5b} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  @  {/}{bg=#2d3042} {/}{bg=#1e2030} {/}{bg=#2d3042} {/}{fg=#6e738d bg=#2d3042}  ⚑  {/}{bg=#2d3042} {/}{bg=#1e2030}  {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#8bd5ca bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}perso{/}{fg=#836da7 bg=#1e2030}│{/}{bg=#1e2030}                                                                              {/}{fg=#836da7 bg=#1e2030}│{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#c6a0f6 bg=#1e2030}●{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}trave{/}{fg=#836da7 bg=#1e2030}╰──────────────────────────────────────────────────────────────────────────────╯{/}{bg=#212435}          {/}
{fg=#cad3f5 bg=#1e2030}              {/}{fg=#363a4f bg=#1e2030}╭{/}{fg=#c6a0f6 bg=#1e2030 mod=bold} ↻ REPEAT {/}{fg=#363a4f bg=#1e2030}────────────────────────────────────────────────╮{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030}FILTERS{/}{fg=#cad3f5 bg=#1e2030}     {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}                                                          {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#ed8796 bg=#1e2030}⚑{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}High prio{/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030}every {/}{fg=#cad3f5 bg=#363a4f mod=bold} 1 {/}{bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030} day  business {/}{fg=#cad3f5 bg=#363a4f mod=bold} week {/}{fg=#6e738d bg=#1e2030} month  year {/}{bg=#1e2030}           {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#eed49f bg=#1e2030}★{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Starred{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}                                                          {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}   {/}{fg=#ed8796 bg=#1e2030}◷{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#a5adcb bg=#1e2030}Overdue{/}{fg=#cad3f5 bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030}mode  {/}{fg=#cad3f5 bg=#363a4f mod=bold} strict {/}{bg=#1e2030} {/}{fg=#cad3f5 bg=#1e2030} after-complete {/}{bg=#1e2030}       {/}{fg=#6e738d bg=#1e2030}next: Wed May 13{/}{bg=#1e2030}  {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}              {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}                                                          {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030}              {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030}→ writes {/}{fg=#eed49f bg=#1e2030 mod=bold}rec:+1w{/}{bg=#1e2030}                                        {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030} {/}{fg=#363a4f bg=#24273a}╭────────────{/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}                                                          {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030} {/}{fg=#363a4f bg=#24273a}│{/}{fg=#cad3f5 bg=#24273a} {/}{fg=#24273a bg=#f5a97f mod=bold} Y {/}{fg=#cad3f5 bg=#24273a} {/}{fg=#cad3f5 bg=#24273a mod=bold}you{/}{fg=#cad3f5 bg=#24273a}    {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#1e2030}  {/}{fg=#6e738d bg=#1e2030 mod=bold}jk{/}{fg=#6e738d bg=#1e2030} field · {/}{fg=#6e738d bg=#1e2030 mod=bold}hl/+-{/}{fg=#6e738d bg=#1e2030} change · {/}{fg=#6e738d bg=#1e2030 mod=bold}Enter{/}{fg=#6e738d bg=#1e2030} save · {/}{fg=#6e738d bg=#1e2030 mod=bold}Esc{/}{fg=#6e738d bg=#1e2030} cancel{/}{bg=#1e2030}       {/}{fg=#363a4f bg=#1e2030}│{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030} {/}{fg=#363a4f bg=#24273a}│{/}{fg=#cad3f5 bg=#24273a}     {/}{fg=#a6da95 bg=#24273a}● todo.{/}{fg=#363a4f bg=#1e2030}╰──────────────────────────────────────────────────────────╯{/}{bg=#212435}                          {/}
{fg=#cad3f5 bg=#1e2030} {/}{fg=#363a4f bg=#24273a}╰───────────────────╯{/}{fg=#cad3f5 bg=#1e2030} {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}                                          {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{fg=#cad3f5 bg=#1e2030}                       {/}{fg=#363a4f bg=#1e2030}│{/}{fg=#cad3f5 bg=#24273a}                                          {/}{fg=#363a4f bg=#212435}│{/}{bg=#212435}                                 {/}
{bg=#24273a} {/}{fg=#181926 bg=#c6a0f6 mod=bold} ● insert {/}{bg=#24273a} {/}{fg=#a5adcb bg=#24273a mod=bold}type{/}{fg=#6e738d bg=#24273a} naturally: tomorrow at 6pm, every fri and sat, +project @context   {/}{fg=#a5adcb bg=#24273a mod=bold}Tab{/}{fg=#6e738d bg=#24273a} chips   {/}{fg=#a5adcb bg=#24273a mod=bold}Ctrl{/}
