tests/snapshots/snapshots__insert_recurrence_builder_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 VIEWS                     ▶▮◀ /tmp/tasq-snapshot.txt  •  15 tasks DETAIL                           
   Today             1 1                                                                            
   Upcoming          6 2   (2)  PRIORITY A  ────────────────────── priority  (A)                    
 ▸ All              15 3    1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
                            2   (A) Call dentist to reschedule cle due       2026-05-06  today      
 SPACES                    (3)  PRIORITY B  ────────────────────── space     work                   
   work              4      3   (B) Review pull requests for auth  tags      @laptop                
   health            3      4   (B) Renew passport before summer t                                  
   finance           2      5   (B) Draft hiring rubric for senior RAW                              
   home              1     (2)  PRIORITY C  ──────────────────────                                  
   learning          1      6   (C) Pay quarterly estimated taxes  (A) 2026-05-01 Finish Q2 board   
   personal          1      7   (C) Order new running shoes +healt deck +work @laptop               
   travel ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
 TAGS     │  > Water the plants  +home ▏                                           ↑     │          
   @errand│                                                                              │          
   @home  │     ▦       ◷       ⧗       ↻       ⇥       !      + home      @       ⚑     │          
   @laptop│                                                                              │          
   @phone ╰──────────────────────────────────────────────────────────────────────────────╯          
              ╭ ↻ REPEAT ────────────────────────────────────────────────╮                          
              │                                                          │                          
              │  every  1    day  business  week  month  year            │                          
              │                                                          │                          
              │  mode   strict   after-complete        next: Wed May 13  │                          
              │                                                          │                          
              │  → writes rec:+1w                                        │                          
              │                                                          │                          
              │  jk field · hl/+- change · Enter save · Esc cancel       │                          
              ╰──────────────────────────────────────────────────────────╯                          
                                                                                                    
                                                                                                    
 INSERT   type naturally: tomorrow at 6pm, every fri and sat, +pro15 open · 2026-05-06 · tasq 0.0.0
