tests/snapshots/snapshots__insert_slash_menu_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tasq-snapshot.txt  •  15 tasks DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth  contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer t                                  
   +personal         1      5   (B) Draft hiring rubric for senior RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes  (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +healt deck +work @laptop               
   @errand╭──────────────────────────────────────────────────────────────────────────────╮          
   @home  │                                                                              │          
   @laptop│  > Schedule team offsite  +work   @phone  /▏                           ↑     │          
   @phone │                                                                              │          
          │    + work     @ phone                                                        │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯          
              ╭──────────────────────────────────────────────────────────╮                          
              │ ATTACH METADATA                                          │                          
              │  Planned     when you'll do it                     /plan │                          
              │  Due date    the deadline                           /due │                          
              │  Recurrence  repeat after completing                /rec │                          
              │  Threshold   hide until this date                     /t │                          
              │  Priority    A · B · C                             /prio │                          
              │  + Project   attach to a project                   /proj │                          
              │  @ Context   tool, place or person                  /ctx │                          
              │                                                          │                          
              │  ↑↓ pick · Enter insert · Esc dismiss · type to filter   │                          
              ╰──────────────────────────────────────────────────────────╯                          
 INSERT   type naturally: tomorrow at 6pm, every fri and sat, +pro15 open · 2026-05-06 · tasq 0.0.0
